--- a/src/MoneyTracker.Domain/MoneyTracker.Domain.csproj
+++ b/src/MoneyTracker.Domain/MoneyTracker.Domain.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
@@ -9,6 +9,13 @@
 	<ItemGroup>
 		<PackageReference Include="MediatR.Contracts" Version="2.0.1" />
 		<PackageReference Include="MimeTypesMap" Version="1.0.8" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Folder Include="Categories\Events\" />
+		<Folder Include="Categories\Repositories\" />
+		<Folder Include="Transactions\Events\" />
+		<Folder Include="Transactions\Repositories\" />
 	</ItemGroup>
 
 </Project>
