--- a/src/MoneyTracker.API/MoneyTracker.API/appsettings.Development.json
+++ b/src/MoneyTracker.API/MoneyTracker.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "Host=moneytracker-db;Port=5432;Database=moneytracker;Username=postgres;Password=postgres;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
