--- a/src/MoneyTracker.API/MoneyTracker.API/appsettings.Development.json
+++ b/src/MoneyTracker.API/MoneyTracker.API/appsettings.Development.json
@@ -7,5 +7,17 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "Audience": "account",
+    "ValidIssuer": "http://moneytracker-idp:8080/auth/realms/moneytracker",
+    "MetadataUrl": "http://moneytracker-idp:8080/auth/realms/moneytracker/.well-know/openid-configuration",
+    "RequireHttpsMetadata": false
+  },
+  "Keycloak": {
+    "AdminUrl": "http://moneytracker-idp:8080/auth/admin/realms/moneytracker/",
+    "TokenUrl": "http://moneytracker-idp:8080/auth/realms/moneytracker/protocol/openid-connect/token",
+    "AdminClientId": "moneytracker-auth-client",
+    "AdminClientSecret": "Y1XivQW7yVsygv7ML9vayuBXH8JkMMCY"
   }
 }
