--- a/src/MoneyTracker.Infrastructure/MoneyTracker.Infrastructure.csproj
+++ b/src/MoneyTracker.Infrastructure/MoneyTracker.Infrastructure.csproj
@@ -9,6 +9,7 @@
 	<ItemGroup>
 		<PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
 		<PackageReference Include="EFCore.NamingConventions" Version="8.0.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.1" />
