--- a/config/docker-compose.yml
+++ b/config/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: ${DOCKER_REGISTRY-}moneytrackerapi
     build:
       context: .
-      dockerfile: src/MoneyTracker.API/MoneyTracker.API/Dockerfile
+      dockerfile: src/MoneyTracker.API/Dockerfile
     depends_on:
       - moneytracker-db
 
